binrw/tests/ui/binrw_br_temp_no_bw_ignore.rs
use binrw::binrw;

#[binrw]
struct Test {
    #[br(temp)]
    _len: u32,
}

fn main() {}
